Finished issue where button box shadow was being cut off

--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -22,6 +22,7 @@
     justify-content: end;
     gap: 5px;
     width: 45%;
+    height: 100%;
 }
 
 #login-button {
